Constraintprog/minizinc-1.6/tests/flattening/test-mzn2fzn/int_div.10.exp
mzn2fzn:
  error: 
  int_div.mzn:4 
  In constraint. 
  In 'div' expression. 
  Division by zero.
